@@ -36,6 +36,8 @@ Release 0.20.3 - Unreleased
                (Lars George via JD)
    HBASE-2082  TableInputFormat is ignoring input scan's stop row setting
                (Scott Wang via Andrew Purtell)
+   HBASE-2068  MetricsRate is missing "registry" parameter
+               (Lars George and Gary Helmling via Stack)
 
   IMPROVEMENTS
    HBASE-1961  HBase EC2 scripts
